open magnetometer, remove some useless mode and enable AUTO_NAVIGATION macro

--- a/rm_infantry.ioc
+++ b/rm_infantry.ioc
@@ -160,73 +160,71 @@ Mcu.IP9=SPI5
 Mcu.IPNb=22
 Mcu.Name=STM32F427I(G-I)Hx
 Mcu.Package=UFBGA176
-Mcu.Pin0=PE3
-Mcu.Pin1=PE2
-Mcu.Pin10=PB7
-Mcu.Pin11=PB6
-Mcu.Pin12=PD6
-Mcu.Pin13=PD0
-Mcu.Pin14=PC11
-Mcu.Pin15=PC10
-Mcu.Pin16=PI7
-Mcu.Pin17=PI6
-Mcu.Pin18=PI5
-Mcu.Pin19=PG9
-Mcu.Pin2=PE1
-Mcu.Pin20=PD5
-Mcu.Pin21=PD1
-Mcu.Pin22=PI2
-Mcu.Pin23=PI9
-Mcu.Pin24=PD2
-Mcu.Pin25=PI0
-Mcu.Pin26=PA9
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PH0/OSC_IN
-Mcu.Pin3=PB5
-Mcu.Pin30=PC8
-Mcu.Pin31=PH1/OSC_OUT
-Mcu.Pin32=PF7
-Mcu.Pin33=PF6
-Mcu.Pin34=PH12
-Mcu.Pin35=PF10
-Mcu.Pin36=PF9
-Mcu.Pin37=PF8
-Mcu.Pin38=PH11
-Mcu.Pin39=PH10
-Mcu.Pin4=PG14
-Mcu.Pin40=PD15
-Mcu.Pin41=PH6
-Mcu.Pin42=PH9
-Mcu.Pin43=PD14
-Mcu.Pin44=PD13
-Mcu.Pin45=PA1
-Mcu.Pin46=PA0/WKUP
-Mcu.Pin47=PE13
-Mcu.Pin48=PD12
-Mcu.Pin49=PD10
-Mcu.Pin5=PG13
-Mcu.Pin50=PA2
-Mcu.Pin51=PE14
-Mcu.Pin52=PB12
-Mcu.Pin53=PB13
-Mcu.Pin54=PD9
-Mcu.Pin55=PD8
-Mcu.Pin56=PA3
-Mcu.Pin57=PF14
-Mcu.Pin58=PE7
-Mcu.Pin59=PE15
-Mcu.Pin6=PB4
-Mcu.Pin60=VP_FATFS_VS_SDIO
-Mcu.Pin61=VP_FREERTOS_VS_ENABLE
-Mcu.Pin62=VP_RTC_VS_RTC_Activate
-Mcu.Pin63=VP_RTC_VS_RTC_Calendar
-Mcu.Pin64=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin65=VP_SYS_VS_tim6
-Mcu.Pin7=PC12
-Mcu.Pin8=PA14
-Mcu.Pin9=PA13
-Mcu.PinsNb=66
+Mcu.Pin0=PE2
+Mcu.Pin1=PE1
+Mcu.Pin10=PB6
+Mcu.Pin11=PD6
+Mcu.Pin12=PD0
+Mcu.Pin13=PC11
+Mcu.Pin14=PC10
+Mcu.Pin15=PI7
+Mcu.Pin16=PI6
+Mcu.Pin17=PI5
+Mcu.Pin18=PG9
+Mcu.Pin19=PD5
+Mcu.Pin2=PB5
+Mcu.Pin20=PD1
+Mcu.Pin21=PI2
+Mcu.Pin22=PI9
+Mcu.Pin23=PD2
+Mcu.Pin24=PI0
+Mcu.Pin25=PA9
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PH0/OSC_IN
+Mcu.Pin29=PC8
+Mcu.Pin3=PG14
+Mcu.Pin30=PH1/OSC_OUT
+Mcu.Pin31=PF7
+Mcu.Pin32=PF6
+Mcu.Pin33=PH12
+Mcu.Pin34=PF9
+Mcu.Pin35=PF8
+Mcu.Pin36=PH11
+Mcu.Pin37=PH10
+Mcu.Pin38=PD15
+Mcu.Pin39=PH6
+Mcu.Pin4=PG13
+Mcu.Pin40=PH9
+Mcu.Pin41=PD14
+Mcu.Pin42=PD13
+Mcu.Pin43=PA1
+Mcu.Pin44=PA0/WKUP
+Mcu.Pin45=PE13
+Mcu.Pin46=PD12
+Mcu.Pin47=PD10
+Mcu.Pin48=PA2
+Mcu.Pin49=PE14
+Mcu.Pin5=PB4
+Mcu.Pin50=PB12
+Mcu.Pin51=PB13
+Mcu.Pin52=PD9
+Mcu.Pin53=PD8
+Mcu.Pin54=PA3
+Mcu.Pin55=PF14
+Mcu.Pin56=PE7
+Mcu.Pin57=PE15
+Mcu.Pin58=VP_FATFS_VS_SDIO
+Mcu.Pin59=VP_FREERTOS_VS_ENABLE
+Mcu.Pin6=PC12
+Mcu.Pin60=VP_RTC_VS_RTC_Activate
+Mcu.Pin61=VP_RTC_VS_RTC_Calendar
+Mcu.Pin62=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin63=VP_SYS_VS_tim6
+Mcu.Pin7=PA14
+Mcu.Pin8=PA13
+Mcu.Pin9=PB7
+Mcu.PinsNb=64
 Mcu.UserConstants=
 Mcu.UserName=STM32F427IIHx
 MxCube.Version=4.22.1
@@ -369,22 +367,13 @@ PE15.GPIO_Label=SD_EXTI
 PE15.Locked=true
 PE15.Signal=GPIO_Input
 PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=IST_RST
+PE2.GPIO_Label=IST_SET
 PE2.Locked=true
 PE2.Signal=GPIO_Output
-PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=IST_INT
-PE3.Locked=true
-PE3.Signal=GPIO_Output
 PE7.GPIOParameters=GPIO_Label
 PE7.GPIO_Label=LED2
 PE7.Locked=true
 PE7.Signal=GPIO_Output
-PF10.GPIOParameters=GPIO_PuPd,GPIO_Label
-PF10.GPIO_Label=CALI
-PF10.GPIO_PuPd=GPIO_PULLUP
-PF10.Locked=true
-PF10.Signal=GPIO_Input
 PF14.GPIOParameters=GPIO_Label
 PF14.GPIO_Label=LED1
 PF14.Locked=true
@@ -568,8 +557,8 @@ SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
-SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI5.CalculateBaudRate=45.0 MBits/s
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI5.CalculateBaudRate=703.125 KBits/s
 SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
